# QtServicePrototype

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GitExtensions.settings  LICENSE  cmake.bat  readme.md
include/: Comm.h  EligibilityService.h  RService.h  RewardsService.h  RewardsService_Test.h  Service.h  ServiceManager.h  ServiceManager_Test.h  Service_Test.h
src/: Comm.cpp  EligibilityService.cpp  RewardsService.cpp  Service.cpp  ServiceManager.cpp  Service_Test.cpp  config.json  main.cpp
